# surveillance-camera

./: .gitignore
backend/: app.py  main.go  pyproject.toml
backend/utils/: face.py
cctv/cctv/: AddFaceView.swift  AppDelegate.swift  ContentView.swift  FrameViewer.swift  ImagePicker.swift  cctvApp.swift
cctv/cctv/Assets.xcassets/default_face.imageset/: Contents.json
cctv/cctvTests/: cctvTests.swift
cctv/cctvUITests/: cctvUITests.swift  cctvUITestsLaunchTests.swift
image_process/: compose.yaml  pyproject.toml
image_process/src/: debug.py  main.py
image_process/src/db/: client.py
image_process/src/utils/: __init__.py  background.py  camera.py  face.py  http.py
